02-hello-tls/hello-app.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello
  labels:
    app: hello

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: nginxdemos/hello:0.4
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: hello
